[package]
name = "lunar-expedition"
version = "0.1.0"
edition = "2021"
authors = ["Mathews Etiegni <etiegnim@gmail.com>"]
description = "A Rust project for lunar mission simulation and navigation"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.91"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
mockall = "0.13.1"
pretty_assertions = "1.4.0"

[features]
default = ["spacecraft", "navigation"]
spacecraft = []
navigation = []

[profile.release]
opt-level = 3
debug = false